# canadalogin-admin-portal

./: .env.sample  .flake8  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.cjs
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: signin-verification.yml
.pi/: AGENTS.md  settings.json  superpowers-state.json
app/: config.py  main.py
app/assets/: tailwind.css
app/auth/: oidc.py  role_mapper.py
app/controller/: _utils.py  _utils_dates.py  schemas.py
app/controller/api/: admin_routes.py  routes.py  user_routes.py
app/controller/web/: _utils.py  applications_routes.py  auth_routes.py  fragments.py  fragments_routes.py  group_management_routes.py  routes.py
app/core/: permissions.py  roles.py
app/dependencies/: __init__.py  auth.py  policies.py  services.py
app/locales/: en.yml  fr.yml
app/middleware/: access_log.py  auth_mw.py  authorization_mw.py  error_handlers.py  locale_mw.py  token_refresh_mw.py
app/policies/: roles.yaml
app/repository/: exceptions.py  iv_admin_client.py  iv_user_client.py  session_store.py  yaml_role_policy_repository.py
app/service/: admin_service.py  authorization_service.py  user_service.py
app/static/: main.css
app/templates/: base.html  home.html  profile.html
app/utils/: acl.py  i18n.py
docs/plans/: 2026-03-05-audit-trail-design.md  2026-03-05-audit-trail-implementation-plan.md
tests/integration/: test_signin_smoke.py
(+39 files in other folders)
