[project]
name = "canadalogin-admin"
version = "0.1.0"
description = "CanadaLogin Admin Site"
requires-python = ">=3.12"
authors = [{name = "CanadaLogin", email = "dev@example.com"}]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
